--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="btn_save_profile">Save Store Profile</string>
     <string name="webClientId">26401326836-mjbcvd9galk9ju4g9ve5am52ai7b9lf0.apps.googleusercontent.com</string>
     <string name="contact_hint">Contact Number / Email Address</string>
+    <string name="title_activity_maps_profile_update">Map</string>
 </resources>
